<?xml version="1.0"?>
<package format="3">

    <!-- Package Information -->
    <name>loam_ros2</name>
    <version>0.0.1</version>
    <description>
        Yet another implementation of LOAM based LIO, this time in ROS2.
    </description>

    <!-- Code Authors -->
    <author email="gh@lnex.dev">lnexenl</author>
    <maintainer email="gh@lnex.dev">lnexenl</maintainer>

    <!-- Licensing -->
    <license>GNU General Public License v3.0</license>

    <!-- ROS2: Dependencies needed to compile this package. -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>rosbag2_cpp</depend>
    <depend>pcl_conversions</depend>
    <depend>pcl_ros</depend>

    <!-- System dependencies for both versions -->
    <depend>eigen</depend>
    <depend>libopencv-dev</depend>
    <depend>libpcl-dev</depend>

    <!-- Note the export is required to expose the executables -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>


</package>